# compiler

./: .clang-format  .gitignore  README.md  makefile
.circleci/: config.yml
src/: CMakeLists.txt  Compiler.cpp  Compiler.h  Config.cpp  Config.h  Error.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  LlvmIrGenerator.cpp  LlvmIrGenerator.h  Scope.cpp  Scope.h  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h  SyntaxTree.cpp  SyntaxTree.h  SyntaxTreePrinter.cpp  SyntaxTreePrinter.h  SyntaxTreeVisitor.h  Token.cpp  Token.h  main.cpp  makefile  utils.cpp  utils.h
src/compiler/: CMakeLists.txt  makefile
src/compilerapi/: AssemblyGenerator.cpp  AssemblyGenerator.h  CHeaderPrinter.cpp  CHeaderPrinter.h  CMakeLists.txt  Compiler.cpp  Compiler.h  CompilerContext.cpp  CompilerContext.h  Config.cpp  Config.h  ErrorLogger.cpp  ErrorLogger.h  ErrorLogger.hpp  LexicalAnalyzer.cpp  LexicalAnalyzer.h  LlvmIrGenerator.cpp  LlvmIrGenerator.h  LlvmIrOptimizer.cpp  LlvmIrOptimizer.h  ROString.h  Scope.cpp  Scope.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SourceGenerator.cpp  SourceGenerator.h  StartEndTokenFinder.cpp  StartEndTokenFinder.h  Stopwatch.cpp  Stopwatch.h  SymbolTable.cpp  SymbolTable.h  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h  SyntaxTree.cpp  SyntaxTree.h  SyntaxTreePrinter.cpp  SyntaxTreePrinter.h  SyntaxTreeVisitor.h  (+13 more)
src/unittests/: CHeaderPrinterTests.cpp  CHeaderPrinterTests.h  CMakeLists.txt  CompilerTests.cpp  CompilerTests.h  ConfigTests.cpp  ConfigTests.h  LexicalAnalyzerTests.cpp  LexicalAnalyzerTests.h  ROStringTests.cpp  ROStringTests.h  SemanticAnalyzerTests.cpp  SemanticAnalyzerTests.h  SourceGeneratorTests.cpp  SourceGeneratorTests.h  StartEndTokenFinderTests.cpp  StartEndTokenFinderTests.h  SyntaxAnalyzerTests.cpp  SyntaxAnalyzerTests.h  TestClass.cpp  TestClass.h  UtilsTests.cpp  UtilsTests.h  main.cpp  makefile
src/unittests/testfiles/: basic.expected.ll  basic.wip  c_header.expected.h  c_header.wip  debug_info.expected.ll  debug_info.wip  multi_file1.expected.ll  multi_file1.wip  multi_file2.wip  source_gen.wip  syntax_tree.expected.json  syntax_tree.wip  tokens.expected.txt  tokens.wip
tools/: code_coverage.py  fuzzer.py  reduce_win_llvm_libs.py
tools/docker/: Dockerfile
